src/static/less/uxebu.less
/* ... */
.container {
}

.container-alt {
}

/* input elements font */
input, textarea {
    font-family: DINPro;
    font-size: 18px;
    font-weight: 200;
}

.font-small {
    font-size: .8em;
}

.alternative, .alternative:link .alternative:active, .alternative:hover, .alternative:visited {
    color: @link-color-alt;
}

.alternative2, .alternative2:link .alternative2:active, .alternative2:hover, .alternative2:visited {
    color: #fff;
}

.uni-form label,.uni-form .label{color:#888;}
.uni-form 
.uni-form fieldset legend{margin-bottom:10px;color:#AAA;font-weight:400;}
.uni-form .form-hint{font-size:80%;color:#AAA;}
.uni-form label{font-weight:400;}
.uni-form .search-input{width:60%;margin:0;}
.uni-form input, .uni-form textarea {
    .background-gradient(
        #181818,
        #232323
    );
    color: #fff;
    border: 1px solid #3b3b3b;
    .border-radius(4px);
}
.uni-form .search-input {
    background: #181818;
    background-image: url(../img/icons_sprite.png), -moz-linear-gradient(center top, #181818 0%, #232323 100%);
    background-image: url(../img/icons_sprite.png), -webkit-gradient(linear, 0% 0%, 0% 100%, from(#181818), to(#232323));
    background-image: url(../img/icons_sprite.png), -o-linear-gradient(#181818, #232323);
    background-repeat: no-repeat, no-repeat;
    background-position: 0 -914px, left top;
    padding-left: 22px;
    .prs;
    color: #fff;
    border: 1px solid #3b3b3b;
    .border-radius(4px);
}
.uni-form .text-input:active {
    border: 1px solid #737373;
}

.geek {
    border-color:@link-color;
    .box-shadow(0 0 3px @link-color, 3, @link-color);
}

.business {
    border-color:@link-color-alt;
    .box-shadow (0 0 3px @link-color-alt, 3, @link-color-alt);
}

.default {
    border-color:#000;
    .box-shadow (0 0 3px #000, 3, #000);
}

.line {
    border-width:0;
    .box-shadow(none, 0, #FFFFFF);
    position:relative;
    .mbs;
}

.line:after {
    content: "";
    display: block;
    width: 100%;
    height: 3px;
    background: white;
    .box-shadow (0 0 3px #FFFFFF, 3, #FFFFFF);
    margin-top:.3em;
}

.line.geek:after {
    background: @link-color;
    .box-shadow(0 0 3px @link-color, 3, @link-color);
}

.line.business:after {
    background: @link-color-alt;
    .box-shadow (0 0 3px @link-color-alt, 3, @link-color-alt);
}

.line.default:after {
    background: #333;
    .box-shadow (0 0 2px #666, 0, #666);
}


a.tag, .tag{
    .border-radius(4px);
    color:#fff;background-color:#000;
    display:inline-block;
    padding:2px 5px;
    margin-right:0.2em;
    margin-bottom:0.5em;
    text-decoration:none;
    font-size:0.75em;
    cursor:pointer;
}
a.tag:hover, a.tag:focus, a.tag:visited,
.tag:hover, .tag:focus, .tag:visited{
    background:#444;
}

.sprite{ background: url(../img/icons_sprite.png) no-repeat top left; }
.sprite-arrow_blue{ background-position: 0 0; width: 33px; height: 34px; }
.sprite-arrow_down{ background-position: 0 -54px; width: 38px; height: 39px; }
.sprite-arrow_up{ background-position: 0 -113px; width: 38px; height: 39px; }
.sprite-arrow_yellow{ background-position: 0 -172px; width: 33px; height: 34px; }
.sprite-banner_human{ background-position: 0 -226px; width: 129px; height: 129px; }
.sprite-box_yellow{ background-position: 0 -375px; width: 38px; height: 38px; }
.sprite-dropdown_arrow{ background-position: 0 -433px; width: 31px; height: 31px; }
.sprite-dropdown_arrow_active{ background-position: 0 -484px; width: 31px; height: 31px; }
.sprite-email{ background-position: 0 -535px; width: 32px; height: 25px; }
.sprite-flag_blue{ background-position: 0 -580px; width: 54px; height: 64px; }
.sprite-flag_yellow{ background-position: 0 -664px; width: 55px; height: 64px; }
.sprite-github{ background-position: 0 -748px; width: 31px; height: 32px; }
.sprite-html5{ background-position: 0 -800px; width: 30px; height: 42px; }
.sprite-linkedin{ background-position: 0 -862px; width: 32px; height: 32px; }
.sprite-loupe{ background-position: 0 -914px; width: 22px; height: 25px; }
.sprite-marker{ background-position: 0 -959px; width: 14px; height: 22px; }
.sprite-star_blue{ background-position: 0 -1001px; width: 38px; height: 36px; }
.sprite-twitter{ background-position: 0 -1057px; width: 36px; height: 33px; }
.sprite-wedge{ background-position: 0 -1110px; width: 21px; height: 10px; }

.icon-before{content:"";.sprite;position:absolute;left:0;}
.arrow-business{padding-left:33px; position:relative;vertical-align:middle;}
.arrow-business:before{.icon-before;.sprite-arrow_blue;}
.arrow-geek{padding-left:33px;position:relative;vertical-align:middle;}
.arrow-geek:before{.icon-before;.sprite-arrow_yellow;}
.email{padding-left:32px;position:relative;}
.email:before{.icon-before;.sprite-email;}
.github{padding-left:31px;position:relative;}
.github:before{.icon-before;.sprite-github;}
.linkedin{padding-left:32px;position:relative;}
.linkedin:before{.icon-before;.sprite-linkedin;}
.twitter{padding-left:36px;position:relative;}
.twitter:before{.icon-before;.sprite-twitter;}
.loupe{padding-left:36px;position:relative;}
.loupe:before{.icon-before;.sprite-loupe;}
.box-geek,
.star-business {
    padding-left:38px;position:relative;

    a {
        color: #fff;
    }
}
.box-geek:before{.icon-before;.sprite-box_yellow;}
.star-business:before{.icon-before;.sprite-star_blue;}
.marker{padding-left:14px;position:relative;}
.marker:before{.icon-before;.sprite-marker;}
.html-logo{.sprite;.sprite-html5;display:inline-block;}

.dropdown-arrow{padding-right:31px;position:relative;}
.dropdown-arrow:before{.icon-before;.sprite-dropdown_arrow;right:0;left:auto;}
.dropdown-arrow:hover, .active .dropdown-arrow{padding-right:31px;position:relative;}
.dropdown-arrow:hover:before, .active .dropdown-arrow:before{.icon-before;.sprite-dropdown_arrow_active;right:0;left:auto;}

.big-arrow-down{margin-bottom:39px;display:block;position:relative;}
.big-arrow-down:after{content:"";.sprite;.sprite-arrow_down;position:absolute;bottom:-39px;left:50%;margin-left:-19px;}
/* ... */

